# Dynamic-Dashboard

./: README.md  app.py  deploy_raspberry.sh  main.py  pyproject.toml  requirements.txt
static/css/: camera.css  style.css
static/js/: calendar.js  camera.js  carousel.js  clock.js  weather.js
templates/: 404.html  config.html  error.html  index.html  upload.html
utils/: motion_detection.py
