[project]
name = "repl-nix-dynamicdashboard"
version = "0.1.0"
description = "Dynamic Dashboard Application"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "icalendar",
    "pytz>=2024.2",
    "gevent>=23.9.1",
    "pyunifiprotect>=0.48.0",
    "aiohttp>=3.9.1",
    "opencv-python-headless>=4.8.1.78"
]
